--- a/login.html
+++ b/login.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Git Bash Commands</title>
+  <title>Login Form</title>
 </head>
 <body>
-  <h1>This is my app!</h1>
-  <h6>Login Form</h6>
+  Watheeever
 </body>
 </html>
